# mcp-context-forge

./: .dockerignore  .env.example  .env.example.prod  .gitignore  CLAUDE.md  Containerfile  Containerfile.lite  Makefile  OPENAPI_INTEGRATION.md  POSTMAN_IMPORT_FRONTEND_GUIDE.md  ROADMAP.md  Untitled-1.json  docker-compose.prod.yml  docker-compose.yml  mcp-catalog.yml  pyproject.toml  test_llmchat_flow.sh
.github/workflows/: nightly-push.yaml
agent_runtimes/langchain_agent/: .pre-commit-config.yaml
deployment/k8s/: mcp-context-forge-deployment.yaml  postgres-deployment.yaml  postgres-secret.yaml
docs/: MCP_Foundry_Architecture.docx  MCP_Foundry_Architecture.md  MCP_Foundry_vs_ContextForge_Comparison.docx  MCP_Foundry_vs_ContextForge_Comparison.md
examples/: openapi_usage_examples.py
firecrawl-nuq-postgres/: Dockerfile
mcp-creator-agent/: Makefile  README.md  demo.py  env.example  example_api_doc.txt  pyproject.toml  requirements.txt  test_simple.py
mcp-creator-agent/mcp_creator_agent/: __init__.py  agent.py  config.py  llm_client.py  main.py  models.py  tools.py
mcp-servers/sample-templates/python/: .env.example  README.md  pyproject.toml
mcp-servers/sample-templates/python/src/sample_mcp_server/: __init__.py  server.py
mcp-servers/sample-templates/python/tests/: test_server.py
mcpgateway/: __init__.py  admin.py  alembic.ini  auth.py  bootstrap_db.py  config.py  db.py  main.py  schemas.py  translate.py
mcpgateway/agents/: __init__.py  openapi_agent.py
mcpgateway/cache/: session_registry.py
mcpgateway/common/: config.py  models.py
mcpgateway/deployment/: __init__.py
mcpgateway/federation/: discovery.py  forward.py
mcpgateway/middleware/: observability_middleware.py  rbac.py  security_headers.py  token_scoping.py
mcpgateway/routers/: email_auth.py  llmchat_router.py  oauth_router.py  observability.py  reverse_proxy.py  subscriptions.py  teams.py  tokens.py  webhooks.py
mcpgateway/services/: a2a_service.py  api_doc_parser_service.py  auth_extraction_service.py  catalog_service.py  completion_service.py  dcr_service.py  deployment_runtime_service.py  doc_crawler_service.py  doc_post_processing.py  email_auth_service.py  firecrawl_crawler_service.py  gateway_service.py  js_renderer_service.py  keycloak_role_mapping_service.py  llm_postprocessor_service.py  llm_service.py  logging_service.py  mcp_client_chat_service.py  oauth_manager.py  openapi_service.py  permission_service.py  postman_service.py  prompt_service.py  registry_service.py  resource_service.py  server_service.py  skill_service.py  sso_service.py  stdio_bridge_manager.py  token_catalog_service.py  token_storage_service.py  tool_generation_job_service.py  tool_service.py
mcpgateway/static/: admin.js
mcpgateway/templates/: admin.html  mcp_registry_partial.html  resources_partial.html
mcpgateway/utils/: client_ip.py  rate_limit.py  services_auth.py  sso_bootstrap.py  url_validation.py  verify_credentials.py
nginx/: nginx.conf
requirements/: MCP Platform Requirements Three Phase Breakdown.md
scripts/: diagnose_oauth_state.py
tests/: conftest.py
tests/async/: profiler.py
tests/differential/: test_pii_filter_differential.py
tests/e2e/: test_admin_apis.py  (+2 more)
(+272 files in other folders)
