[project]
name = "sample-mcp-server"
version = "0.1.0"
description = "Sample MCP server for the MCP Foundry deploy flow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastmcp==2.11.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sample-mcp-server = "sample_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
